k3s/manifests/app-services/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaman-notification-service
  labels:
    app: gaman-notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gaman-notification-service
  template:
    metadata:
      name: gaman-notification-service
      labels:
        app: gaman-notification-service
    spec:
      containers:
        - name: gaman-notification-service
          image: git.dev.aquaswim.my.id/aquaswim/gaman-microservice/notification-service # todo: can be overrided
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "8Mi"
              cpu: "0.1"
            limits:
              memory: "16Mi"
              cpu: "0.25"
      restartPolicy: Always
