k3s/manifests/app-services/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaman-user-service
  labels:
    app: gaman-user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gaman-user-service
  template:
    metadata:
      name: gaman-user-service
      labels:
        app: gaman-user-service
    spec:
      containers:
        - name: gaman-user-service
          image: git.dev.aquaswim.my.id/aquaswim/gaman-microservice/user-service # todo: can be overrided
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "8Mi"
              cpu: "0.1"
            limits:
              memory: "32Mi"
              cpu: "0.25"
          ports:
            - containerPort: 50051
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: gaman-user-service
spec:
  selector:
    app: gaman-user-service
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
