k3s/manifests/app-services/apigateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaman-apigateway-service
  labels:
    app: gaman-apigateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gaman-apigateway-service
  template:
    metadata:
      name: gaman-apigateway-service
      labels:
        app: gaman-apigateway-service
    spec:
      containers:
        - name: gaman-apigateway-service
          image: git.dev.aquaswim.my.id/aquaswim/gaman-microservice/api-gateway # todo: can be overrided
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "8Mi"
              cpu: "0.1"
            limits:
              memory: "16Mi"
              cpu: "0.25"
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: gaman-apigateway-service
spec:
  selector:
    app: gaman-apigateway-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaman-apigateway-service-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: gaman.playground.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gaman-apigateway-service
                port:
                  number: 8080
